--- a/text/someprelude.tex
+++ b/text/someprelude.tex
@@ -1,1 +1,7 @@
-\newcommand{\kindStar}{\star}
+\newcommand{\kindStar}{{\star}}
+\newcommand{\hasType}{~{:}~}
+\newcommand{\hasKind}{\,{:}\,}
+\newcommand{\typeTo}{\mathrel{\mathop{\to}}}
+\newcommand{\kindTo}{\mathrel{\mathop{\to}}}
+\newcommand{\typeDot}{\,.\,}
+\newcommand{\inj}{\hookrightarrow}
