--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -140,10 +140,16 @@ Check for these rules is done statically (at compile time).
 
 \section{Basics}
 
+Very basic idea of any type system is, that various objects are
+suitable for various types of operations.
+
+white listing/black listing
+
 Values, types, kinds. \(\kindStar\). Doraz na to co je nove v pristupe
 mozeme extenzie videne jednotnejsie... triedy ako kindy...
 
 attempt for more unified view of TC \& kind in Hask TS.
+
 
 \section{Haskell type system}
 
@@ -232,7 +238,7 @@ captured in figure~\ref{diagram:kinds_star1}.
 \begin{figure}
 	\centering
 	\scalebox{0.9}{\input{diagram/gen/kinds_star1}}
-	\caption[Explicit \uv{star} Prelude classes]{Explicit \(\kindStar\) Prelude classes}
+	\caption[Explicit Prelude \uv{star} classes]{Explicit Prelude \(\kindStar\)-classes}
 	\label{diagram:kinds_star1}
 \end{figure}
 One might have doubts about including \(\emptyset\) (with evident semantics) into diagram.
@@ -256,7 +262,7 @@ can be found in figure~\ref{diagram:kinds_star2}.
 \begin{figure}
 	\centering
 	\scalebox{1.0}{\input{diagram/gen/kinds_star2}}
-	\caption[Alternative view for some \uv{star} classes]{Alternative view for some \(\kindStar\) classes}
+	\caption[Alternative view for some \uv{star} classes]{Alternative view for some \(\kindStar\)-classes}
 	\label{diagram:kinds_star2}
 \end{figure}
 
@@ -402,7 +408,7 @@ f :: Eq a -> a -> [[a]] -> Bool
 f i = any . elem i
 \end{code}
 
-One may naturally wonder, how it would be with non-\(\kindStar\) classes.
+One may naturally wonder, how it would be with other than \(\kindStar\)-classes.
 Take \texttt{Monad}.
 \begin{code}
 class Monad m where
