--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -27,6 +27,15 @@
   address = {New York, NY, USA},
 }
 
+@book{girard:1989:proofsAT,
+  author = {Girard, Jean-Yves and Taylor, Paul and Lafont, Yves},
+  title = {Proofs and types},
+  year = {1989},
+  isbn = {0-521-37181-3},
+  publisher = {Cambridge University Press},
+  address = {New York, NY, USA},
+}
+
 @inproceedings{barendregt:1992:lambdaProc,
   author = {Henk P. Barendregt},
   title = {Lambda Calculi with Types},
