--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -229,7 +229,7 @@ Types and terms are two different things, types are polymorphic,
 type variables are implicitly universally quantified at the top level of type.
 Type system provides not only type checking but also type inference.
 
-Basic/Constant types
+Basic types
 \begin{code}
 ()   :: ()
 True :: Bool
